2018-06-05  Simon Pfreundschuh <simon.pfreundschuh@chalmers.se>

	* arts-2-3-1072

	* src/arts_api[h, cc]:
	- Fix bug accidentally introduced in last commit.

2018-06-05  Simon Pfreundschuh <simon.pfreundschuh@chalmers.se>

	* arts-2-3-1071

	* src/arts_api[h, cc]:
	- Added agenda_append method to emulate include statements inside
	  agenda definition.
	- Fixed handling of agendas in agenda_insert_set

	* src/interactive_workspace.cc:
	- Fixed setter function for WSVs of group agenda.

2018-06-02  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-1070

	* Bug fix! Contribution to Q was wrong for all surface set-ups
	involving surfaceFlatRvRh. This includes e.g. TESSEM.

	* src/m_surface.cc (surfaceFlatRvRh): surface_emission(iv,1) had
	wrong sign. My mistake. Found by Simon.

	* src/geodetic.cc (poslos2cart): Deactived assert( abs( lon ) <=
	360 ); As lon is cyclic and code works even for higher lons. 

	* src/ppath.cc (ppath_start_stepping): ppath.pos(0,2) was set
	incoreectly for 3D empty path.

2018-06-01  Richard Larsson  <ric.larsson@gmail.com>

	* arts-2-3-1069
	
	Change in Zeeman calculations to save some memory.
	Will break controlfiles using Zeeman and old computational
	method.
	
	* controlfiles/*:  The linemixing tests are now covered by
	the lineshapes tests so I removed them.  The Zeeman tests
	now need to initialize wigner functionality to work.  This
	greatly simplifies the code
	
	* src/absorption.cc: 
	Changed interface to reach the new Zeeman calculations
	
	* src/linefunctions.cc: as absorption.cc and changed name
	of faddeeva functions to voigt so people more easily find
	these
	
	* src/linerecord.cc:  Updated reading/writing of Zeeman
	line information
	
	* src/m_linemixing.cc:  updated interface to linefunctions
	
	* src/m_radiation_field.cc: as above 
	
	* src/m_zeeman.cc:  Added zeeman_linerecord_precalcModifyFromData
	to modify the Zeeman data by external data easily.  Removed the